--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,29 @@
 cmake_minimum_required(VERSION 2.8)
 
+# Check if required packages are installed
 find_package(SWIG REQUIRED)
 find_package(Java REQUIRED)
 find_package(JNI REQUIRED)
 find_package(LibXml2 REQUIRED)
 
+# Add modules
 include(UseJava)
 include(UseSWIG)
 
-# add rdfa linker and compiler flags
-# https://stackoverflow.com/questions/32507252/how-to-include-pkg-config-cflags-libs-gtk-2-0-in-cxx-flags-of-cmake?rq=1
-# https://stackoverflow.com/questions/11961303/cmake-which-package-name-to-pass-to-find-package
+# Add directories to the build process
+set( CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR} )
 
 include_directories(${LIBXML2_INCLUDE_DIR})
 include_directories(${JNI_INCLUDE_DIRS})
-#link_directories(/usr/local/lib)
-link_libraries(rdfa)
-
-
-
-set( CMAKE_SWIG_OUTDIR ${CMAKE_CURRENT_BINARY_DIR} )
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 
-set_property(SOURCE rdfa.i PROPERTY CPLUSPLUS ON)
-# set(CMAKE_SWIG_FLAGS -package example)
-# set(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_SOURCE_DIR}/example")
-# set_source_files_properties(example.i PROPERTIES CPLUSPLUS ON)
-# SWIG_ADD_MODULE(core Java native.i lib.cpp)
+# Link library. TODO: replace because of deprecation
+link_libraries(rdfa)
 
-# Build the C++ code into a dynamic library: example.dll (on Windows) or libexample.so (on Linux)
+# Build the C++ code into a dynamic library: rdfaJava.dll (on Windows) or librdfaJava.so (on Linux)
+set(CMAKE_SWIG_FLAGS -package org.apache.any23.librdfa)
+set(CMAKE_SWIG_OUTDIR "${CMAKE_CURRENT_BINARY_DIR}/org/apache/any23/librdfa")
+set_property(SOURCE rdfa.i PROPERTY CPLUSPLUS ON)
 swig_add_module(
     rdfaJava
     java
@@ -43,7 +38,7 @@ add_custom_command(
     COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE:rdfaJava> ${CMAKE_CURRENT_BINARY_DIR}
 )
 
-# Build the Java code into ExampleJNI.jar
+# Build the Java code into RdfaJNI.jar
 add_jar(
     RdfaJNI
     SOURCES
@@ -53,7 +48,6 @@ add_jar(
 add_dependencies( RdfaJNI rdfaJava )
 
 # Finally build the demonstration code into Main.jar
-
 set(CMAKE_JAVA_JAR_ENTRY_POINT main)
 add_jar(
     Main
